# python_lesson_33

./: .dockerignore  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml  deploy_main.yaml  push_any_except_main.yaml
core/: fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0002_alter_user_options.py
deploy/: .env  docker-compose.yaml
diploma_db_data/: postmaster.pid
diploma_db_data/base/1/: 2619  2696  2840  2841  pg_internal.init
diploma_db_data/base/5/: 1247  1249  1259  1259_vm  16387  16388  16392  16393  16395  16396  16399  16401  16403  16404  16407  16409  16413  16415  16417  16421  16423  16430  16431  16432  16445  16449  16454  16455  16457  16459  16463  16465  16472  16485  16498  16499  16500  16507  16520  16525  (+27 more)
diploma_db_data/global/: 1260  pg_control  pg_internal.init
diploma_db_data/pg_stat/: pgstat.stat
todolist/: settings.py  urls.py
