[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Andrey Torlopov <torlopov.mail@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.0.1"
autopep8 = "^2.0.2"
pyformat = "^0.7"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
social-auth-app-django = "^5.2.0"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
